methods.picture.PictureMono3.scala.error
Erreur de compilation :
PictureMono3:2: error: not found: value grandscotes
  grandscotes()
  ^PictureMono3:3: error: not found: value grandscotes
  grandscotes()
  ^PictureMono3:4: error: not found: value grandscotes
  grandscotes()
  ^